tests/rosetta/out/Zig/100-doors.error
zig build: exit status 1
/tmp/100-doors.zig:15:19: error: unused capture
